# swaybinds

./: CHANGELOG.md  Cargo.toml  README.md  artifacts.json  changelog.rss  index.html  justfile  oranda.json  swaybinds-installer.sh.txt
.github/workflows/: ci.yml  web.yml
artifacts/: index.html
changelog/: index.html
changelog/v0.1.0/: index.html
changelog/v0.2.0/: index.html
src/: cli.rs  keybinds.rs  main.rs
tests/: cli.rs
tests/expected/: table  table_search
tests/inputs/keybinds/.config/sway/: config
tests/inputs/no_keybinds/.config/sway/: config
