[package]
name = "swaybinds"
description = "See your Sway key bindings in your terminal"
authors = ["Jorge Mayoral Álvarez <contact@yorch.dev>"]
repository = "https://github.com/JorgeMayoral/swaybinds"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.20", features = ["derive"] }
comfy-table = "7.1.1"
directories = "5.0.1"

[dev-dependencies]
assert_cmd = "2.0.16"
