[package]
name = "swaybinds"
description = "See your Sway key bindings in your terminal"
authors = ["Jorge Mayoral Álvarez <contact@yorch.dev>"]
repository = "https://github.com/JorgeMayoral/swaybinds"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.92"
clap = { version = "4.5.21", features = ["derive"] }
comfy-table = "7.1.1"
directories = "5.0.1"

[dev-dependencies]
assert_cmd = "2.0.16"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false
